# goni-prototype-lab

./: .env.example  Makefile  README.md
.github/workflows/: ci.yml
benchmarks/datasets/demo/: sample.txt
benchmarks/scenarios/: background.json  burst.json  interactive.json  mixed.json
config/: council.env.example  council.yaml  router.yaml
demo/: demo.sh  demo_expected.md
demo/expected/: demo_output.json
deploy/: docker-compose.yml
deploy/compose/: docker-compose.observability.yml
deploy/k8s/base/: llm-local.yaml  namespace.yaml  orchestrator.yaml  pvc-models.yaml  vecdb.yaml
deploy/k8s/overlays/cluster/: kustomization.yaml
deploy/observability/: grafana-dashboard.json  prometheus.yml
eval/scenarios/: operator_day.json
examples/: chat.sh
goni-lab/: README.md  STATUS.md  TRACEABILITY.md  goni_lab.py  quickstart.md
goni-lab/fixtures/: expected_bench.json
goni-lab/scenarios/: mixed.json
prototype/: 00-index.md
prototype/01-rag-slice/: README.md  ingest.py  test_ingest.py
prototype/frontend-stub/: README.md
prototype/frontend-stub/app/: globals.css  layout.tsx  page.tsx
prototype/frontend-stub/components/: MarkdownPage.tsx  SidebarNav.tsx
prototype/frontend-stub/lib/: content.ts
scripts/: demo.sh  doctor.sh  generate_agents.py  run_smoke_local.sh  smoke_test.sh  txt_lint.sh  validate_truth_map.py
software/kernel/: AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.egress
software/kernel/goni-agent/: Cargo.toml
software/kernel/goni-agent/src/: lib.rs
software/kernel/goni-cap/: Cargo.toml
software/kernel/goni-cap/src/: lib.rs
software/kernel/goni-classifier/: Cargo.toml
software/kernel/goni-classifier/src/: lib.rs
software/kernel/goni-cli/: Cargo.toml
software/kernel/goni-cli/src/: main.rs
software/kernel/goni-context/: Cargo.toml
software/kernel/goni-context/src/: lib.rs
software/kernel/goni-core/: Cargo.toml
software/kernel/goni-core/src/: lib.rs
software/kernel/goni-egress-gate/: Cargo.toml
software/kernel/goni-egress-gate/src/: main.rs
software/kernel/goni-embed/: Cargo.toml
software/kernel/goni-embed/src/: lib.rs
software/kernel/goni-http/: Cargo.toml
software/kernel/goni-http/src/: main.rs
software/kernel/goni-infer/: Cargo.toml
software/kernel/goni-infer/src/: http_vllm.rs  lib.rs
software/kernel/goni-policy/: Cargo.toml
software/kernel/goni-policy/src/: lib.rs
software/kernel/goni-receipts/: Cargo.toml
software/kernel/goni-receipts/src/: lib.rs
software/kernel/goni-redactor/: Cargo.toml
software/kernel/goni-redactor/src/: lib.rs
software/kernel/goni-router/: Cargo.toml
software/kernel/goni-router/src/: lib.rs
software/kernel/goni-sched/: Cargo.toml
software/kernel/goni-sched/src/: lib.rs
software/kernel/goni-schema/: Cargo.toml
software/kernel/goni-schema/src/: lib.rs  macros.rs  plane.rs
software/kernel/goni-schema/tests/: txt_axiom.rs
software/kernel/goni-store/: Cargo.toml
software/kernel/goni-store/src/: lib.rs  multi.rs  qdrant.rs  spine_mem.rs
software/kernel/goni-tools/: Cargo.toml
software/kernel/goni-tools/src/: lib.rs
software/kernel/goni-types/: Cargo.toml
software/kernel/goni-types/src/: lib.rs
tests/integration/nonbypass/: run.sh
tools/manifests/: demo.echo.json
