[workspace]
members = [
    "goni-types",
    "goni-schema",
    "goni-store",
    "goni-context",
    "goni-sched",
    "goni-router",
    "goni-infer",
    "goni-cap",
    "goni-embed",
    "goni-policy",
    "goni-receipts",
    "goni-classifier",
    "goni-redactor",
    "goni-egress-gate",
    "goni-core",
    "goni-agent",
    "goni-tools",
    "goni-cli",
    "goni-http",
]

resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
arrow = "54"
arrow-array = "54"
arrow-schema = "54"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures-core = "0.3"
futures-util = "0.3"
thiserror = "1.0"
cap-std = "3"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
sha2 = "0.10"
