[package]
name = "goni-egress-gate"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
anyhow = "1"

[dependencies.goni-policy]
path = "../goni-policy"

[dependencies.goni-receipts]
path = "../goni-receipts"
