[package]
name = "goni-http"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
anyhow = "1"
futures-util = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

goni-core = { path = "../goni-core" }
goni-store = { path = "../goni-store" }
goni-context = { path = "../goni-context" }
goni-sched = { path = "../goni-sched" }
goni-router = { path = "../goni-router" }
goni-infer = { path = "../goni-infer" }
goni-types = { path = "../goni-types" }
goni-receipts = { path = "../goni-receipts" }
