[package]
name = "goni-infer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
goni-types = { path = "../goni-types" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
