[package]
name = "goni-store"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
goni-embed = { path = "../goni-embed" }
