[package]
name = "goni-tools"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
hex = "0.4"

goni-cap = { path = "../goni-cap" }
goni-store = { path = "../goni-store" }
goni-policy = { path = "../goni-policy" }
goni-receipts = { path = "../goni-receipts" }
